--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "LibUsbDotNet"]
 	path = LibUsbDotNet
 	url = https://github.com/LibUsbDotNet/LibUsbDotNet
+[submodule "VCamNetSample"]
+	path = VCamNetSample
+	url = https://github.com/smourier/VCamNetSample
