Initial Rearchitecture with the intention of being able to achieve 1 virtual camera any driver support

--- a/Ps3CameraDriver/Ps3CameraDriver.csproj
+++ b/Ps3CameraDriver/Ps3CameraDriver.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LibUsbDotNet\src\LibUsbDotNet\LibUsbDotNet.csproj" />
+    <ProjectReference Include="..\VirtualCameraCommon\VirtualCameraCommon.csproj" />
   </ItemGroup>
 
   <ItemGroup>
